--- a/css/lessons.css
+++ b/css/lessons.css
@@ -1,11 +1,11 @@
 .lessons-main-content {
-    padding: 15vh 5vw;
+    padding: 15svh 5vw;
     margin: 0 auto;
     color: var(--white);
 }
 
 .lesson-category-section {
-    margin-bottom: 6vh;
+    margin-bottom: 6svh;
 }
 
 .lesson-category-section:last-child {
@@ -15,13 +15,13 @@
 .main-title.category-title {
     text-align: center;
     letter-spacing: 2px;
-    padding: 5vh 0;
+    padding: 5svh 0;
 }
 
 .box_container {
     display: flex;
     flex-wrap: wrap;
-    gap: 2vh;
+    gap: 2svh;
     justify-content: center;
 }
 
@@ -37,8 +37,8 @@
 }
 
 .lesson-card {
-    width: 60vh;
-    height: 17vh;
+    width: 60svh;
+    height: 17svh;
     background-color: var(--card-bg);
     border: 1px solid var(--not-completed-color);
     border-radius: 10px;
