--- a/css/index.css
+++ b/css/index.css
@@ -408,7 +408,15 @@
         font-size: 1.4rem;
         margin-bottom: 2rem;
     }
+
+    .box-info li {
+        font-size: 1.5rem;
+    }
     
+    .checkbox-icon {
+        font-size: 1.4rem;
+    }
+
     .check-box p,
     .checkbox-icon {
         font-size: 1.4rem; 
