--- a/css/style.css
+++ b/css/style.css
@@ -47,22 +47,16 @@
 }
 
 html {
-    height: 100%;
+    font-size: 100%;
 }
 
 body {
-    min-height: 100%;
+    min-height: 100svh;
     font-size: 100%;
-    background: var(--grey) url(../images/back.webp) no-repeat center center/cover;
-    background-attachment: scroll;
+    background: var(--grey) url(../images/back.webp) no-repeat center top / cover;
     color: var(--white);
-    
     display: flex;
     flex-direction: column;
-}
-
-main {
-    flex-grow: 1;
 }
 
 h2 {
