--- a/css/index.css
+++ b/css/index.css
@@ -338,6 +338,10 @@
     h2 {
         text-align: center;
     }
+    
+    .intro .text-intro h2 {
+        font-size: 50px;
+    }
 
     .intro {
         flex-direction: column-reverse;
