--- a/css/style.css
+++ b/css/style.css
@@ -112,4 +112,13 @@ h3 {
     html {
         font-size: 55%;
     }
+
+    h2 {
+        text-align: center;
+        font-size: 40px;
+    }
+
+    h3 {
+        font-size: 20px;
+    }
 }
