--- a/css/lesson-page.css
+++ b/css/lesson-page.css
@@ -24,6 +24,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    min-height: 80px;
 }
 
 .lesson-header .fas {
