--- a/css/style.css
+++ b/css/style.css
@@ -58,22 +58,10 @@ main.main {
 body {
     min-height: 100svh;
     font-size: 100%;
-    background-color: var(--grey);
+    background: var(--grey) url(../images/back.webp) no-repeat center top / cover;
     color: var(--white);
     display: flex;
     flex-direction: column;
-    position: relative;
-}
-
-body::before {
-    content: '';
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: -1;
-    background: url(../images/back.webp) no-repeat center center / cover;
 }
 
 h2 {
