--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ main.main {
 }
 
 body {
-    min-height: 100svh;
+    min-height: 100vh;
     font-size: 100%;
     background: var(--grey) url(../images/back.webp) no-repeat center top / cover;
     color: var(--white);
